--- a/style.css
+++ b/style.css
@@ -3,6 +3,11 @@ body {
     margin: 0;
     padding: 0;
     background-color: #f5f5f5;
+    box-sizing: border-box;
+}
+
+*, *:before, *:after {
+    box-sizing: inherit;
 }
 
 .content-block {
